Move modal styles to CSS

--- a/ui-src/src/app/app.css
+++ b/ui-src/src/app/app.css
@@ -29,6 +29,24 @@ ul {
 	max-width: 150px;
 }
 
+.modal_backdrop {
+	position: fixed;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	background-color: rgba(0,0,0,0.3);
+	padding: 50px;
+}
+
+.modal_style {
+	background-color: #fff;
+	border-radius: 5px;
+	max-width: 500px;
+	min-height: 200px;
+	margin: 0px auto;
+	padding: 30px;
+}
 
 #banner a {
 	color: #fff;
