New call_rpc currently requires empty params to be {} not null

--- a/conductor/conductor-config.tmpl
+++ b/conductor/conductor-config.tmpl
@@ -6,8 +6,8 @@ bootstrap_nodes = []
 [[agents]]
 id = "test_agent1"
 name = "HoloTester1"
-public_address = "HcScJPIgEzf3r53sv4oiHtMM7Vze3tdtxCJYT78sNVG85d6gXbqdw4oDmt4egca"
-key_file = "conductor/holo_tester.key"
+public_address = "HcSci9Sh6cVrphbujv884H3H34hSIZAzp8s8hni56qf9Q7Q6789Um7IzDhSO4bz"
+keystore_file = "conductor/holo_tester.key"
 
 [[dnas]]
 id = "coolcats"
