--- a/conductor/conductor-config2.tmpl
+++ b/conductor/conductor-config2.tmpl
@@ -6,8 +6,8 @@ bootstrap_nodes = ["_BOOTSTRAP_"]
 [[agents]]
 id = "test_agent2"
 name = "HoloTester2"
-public_address = "HcSCi5GfE5zrc84o9hYTC86D7ekySm6jrO8F69aKZiKSe8pqA6TrKM7OByfjikr"
-key_file = "conductor/holo_tester2.key"
+public_address = "HcSCIbG9Tendwdmzom8X3OeAd8T5dVrifO78tB587sx9DkJ9cgKbUnIUvwnwdoi"
+keystore_file = "conductor/holo_tester2.key"
 
 [[dnas]]
 id = "coolcats"
