--- a/conductor/conductor-config3.tmpl
+++ b/conductor/conductor-config3.tmpl
@@ -6,8 +6,8 @@ bootstrap_nodes = ["_BOOTSTRAP_"]
 [[agents]]
 id = "test_agent3"
 name = "HoloTester3"
-public_address = "HcScj3xv9rhyZo5do6mGNbCa4A5VummkmqZ47qsOF7z3Hxhj9ED9Rdck4F6Hf5z"
-key_file = "conductor/holo_tester3.key"
+public_address = "HcScjtDX7x6aNdf8vzzU7u5SPobjc8fogUeDW7HOVi4c9ygg94SFpJSQ6U7wiki"
+keystore_file = "conductor/holo_tester3.key"
 
 [[dnas]]
 id = "coolcats"
